fix and create db file, git ignore db

--- a/templates/owner/booking_details.html
+++ b/templates/owner/booking_details.html
@@ -218,7 +218,7 @@
                                 <div class="col-md-6 mt-3">
                                     <div class="homestay-info">
                                         <div class="info-icon">
-                                            <i class="bi bi-currency-dollar"></i>
+                                            <i class="bi bi-cash-coin"></i>
                                         </div>
                                         <div class="info-content">
                                             <div class="info-label">Price per night</div>
