--- a/templates/owner/statistics.html
+++ b/templates/owner/statistics.html
@@ -563,7 +563,7 @@
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-icon">
-                        <i class="fas fa-dollar-sign"></i>
+                        <i class="fas fa-money-bill"></i>
                     </div>
                     <div class="stat-label">Lợi nhuận</div>
                     <div class="stat-value" id="stat-profit">{{ "{:,}".format(stats.total_profit) }}đ</div>
